@@ -879,7 +879,8 @@ GLIBCXX_3.4.11 {
     _ZSt11__once_call;
     _ZSt15__once_callable;
     _ZSt14__once_functor;
-    _ZSt23__get_once_functor_lockv;
+    _ZSt19__once_functor_lock;
+    _ZSt16__get_once_mutexv;
     __once_proxy;
 
     # condition_variable
